[fix] left and right slide button size and moved notif button to not overlap on right slide button in settings page

--- a/src/nginx/html/styles/index.css
+++ b/src/nginx/html/styles/index.css
@@ -140,8 +140,8 @@
 #notifCenterContainer{
 	position: absolute;
 	right: 0;
-	top: 50%;
-	height: 50%;
+	top: 40%;
+	height: fit-content;
 	display: none;
 	flex-direction: column;
 }
@@ -311,6 +311,7 @@
 
 .openCenter#notifCenterContainer{
 	animation: pushNotifAppear 300ms linear forwards;
+	height: 50%;
 }
 
 .quickOpenCenter#notifCenterContainer{
@@ -376,6 +377,7 @@
 
 .closeCenter#notifCenterContainer{
 	width: 20rem;
+	height: 50%;
 	animation: pushNotifAppear 300ms linear 300ms reverse;
 }
 
@@ -415,6 +417,7 @@
 	100% {
 		height: 100%;
 		border-left: .1rem solid var(--main-text-rgb);
+		border-bottom: .1rem solid var(--main-text-rgb);
 		overflow-y: scroll;
 	}
 }
